--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ h2{
 	background-color:#DBE9B6;
 	background-image:url(../images/bg.png);
 	overflow:hidden;
+	position:relative;
 }
 #data{
 	display:none;
@@ -253,4 +254,28 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', e
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e3513', endColorstr='#be6d4d',GradientType=0 );
 	-webkit-box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.4);
 	box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.4);
+}
+
+#external-btn{
+	position: absolute;
+	right: 0;
+	width: 200px;
+	height: 40px;
+	top:50px;
+	background: black;
+	-webkit-transform: rotate(270deg);
+	-webkit-transform-origin: 200px 40px;
+	color: #fff;
+	border-radius: 15px 15px 0 0;
+	padding:5px 4px;
+	background: -moz-linear-gradient(top, rgba(45,55,20,0.6) 0%, rgba(45,55,20,0.6) 25%, rgba(90,108,46,0.6) 75%, rgba(90,108,46,0.6) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(45,55,20,0.6)), color-stop(25%,rgba(45,55,20,0.6)), color-stop(75%,rgba(90,108,46,0.6)), color-stop(100%,rgba(90,108,46,0.6)));
+	background: -webkit-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background: -o-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background: -ms-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background: linear-gradient(to bottom, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', endColorstr='#995a6c2e',GradientType=0 );
+	border: 1px solid rgba(40,49,17,0.5);
+	-webkit-box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
 }
