--- a/css/index.css
+++ b/css/index.css
@@ -57,15 +57,15 @@ h2{
 	margin:0 20px 0 50px;
 	float:left;
 	text-align:center;
-background: -moz-linear-gradient(top, rgba(237,145,23,0.5) 0%, rgba(237,145,23,0.5) 25%, rgba(246,230,180,0.5) 72%, rgba(246,230,180,0.5) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(237,145,23,0.5)), color-stop(25%,rgba(237,145,23,0.5)), color-stop(72%,rgba(246,230,180,0.5)), color-stop(100%,rgba(246,230,180,0.5))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ed9117', endColorstr='#80f6e6b4',GradientType=0 ); /* IE6-9 */
--webkit-box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
-box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
+	background: -moz-linear-gradient(top, rgba(237,145,23,0.5) 0%, rgba(237,145,23,0.5) 25%, rgba(246,230,180,0.5) 72%, rgba(246,230,180,0.5) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(237,145,23,0.5)), color-stop(25%,rgba(237,145,23,0.5)), color-stop(72%,rgba(246,230,180,0.5)), color-stop(100%,rgba(246,230,180,0.5))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(237,145,23,0.5) 0%,rgba(237,145,23,0.5) 25%,rgba(246,230,180,0.5) 72%,rgba(246,230,180,0.5) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ed9117', endColorstr='#80f6e6b4',GradientType=0 ); /* IE6-9 */
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
+	box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
 }
 #center{
 	width:780px;
@@ -73,6 +73,8 @@ box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
 	float:left;
 	text-align:center;
 }
+
+#popup-container h2,
 #left h2{
 	color:#EDB715;
 }
@@ -128,21 +130,20 @@ box-shadow: 0px 0px 20px 0px rgba(90, 108, 46, 0.5);
 	display:block;
 	height:60px;
 	line-height:60px;
--webkit-border-radius: 30px;
-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	border-radius: 30px;
 	text-decoration:none;
 	color:#fff;
-background: rgb(142,53,19); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(142,53,19,1) 25%, rgba(190,109,77,1) 75%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(25%,rgba(142,53,19,1)), color-stop(75%,rgba(190,109,77,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e3513', endColorstr='#be6d4d',GradientType=0 ); /* IE6-9 */
--webkit-box-shadow:  1px 2px 4px 0px rgba(0, 0, 0, 0.4);
-
-        box-shadow:  1px 2px 4px 0px rgba(0, 0, 0, 0.4);
+	background: rgb(142,53,19); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(142,53,19,1) 25%, rgba(190,109,77,1) 75%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(25%,rgba(142,53,19,1)), color-stop(75%,rgba(190,109,77,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(142,53,19,1) 25%,rgba(190,109,77,1) 75%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e3513', endColorstr='#be6d4d',GradientType=0 ); /* IE6-9 */
+	-webkit-box-shadow:  1px 2px 4px 0px rgba(0, 0, 0, 0.4);
+	box-shadow:  1px 2px 4px 0px rgba(0, 0, 0, 0.4);
 	border-left:4px solid transparent;
 	border-right:4px solid transparent;
 	font-size:16px;
@@ -165,21 +166,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e3513', end
 
 #submenu{
 	color:#fff;
--webkit-border-radius: 20px;
-
-    border-radius: 20px;
+	-webkit-border-radius: 20px;
+   border-radius: 20px;
 	padding:40px 10px;
-background: -moz-linear-gradient(top,  rgba(45,55,20,0.6) 0%, rgba(45,55,20,0.6) 25%, rgba(90,108,46,0.6) 75%, rgba(90,108,46,0.6) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(45,55,20,0.6)), color-stop(25%,rgba(45,55,20,0.6)), color-stop(75%,rgba(90,108,46,0.6)), color-stop(100%,rgba(90,108,46,0.6))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', endColorstr='#995a6c2e',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top,  rgba(45,55,20,0.6) 0%, rgba(45,55,20,0.6) 25%, rgba(90,108,46,0.6) 75%, rgba(90,108,46,0.6) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(45,55,20,0.6)), color-stop(25%,rgba(45,55,20,0.6)), color-stop(75%,rgba(90,108,46,0.6)), color-stop(100%,rgba(90,108,46,0.6))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', endColorstr='#995a6c2e',GradientType=0 ); /* IE6-9 */
 	border:1px solid rgba(40,49,17,0.5);
--webkit-box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
-
-        box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	-webkit-box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+   box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
 }
 
 #submenu h2{
@@ -188,6 +187,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', e
 	font-size:50px;
 }
 
+#external-container ul,
 #submenu ul{
 	list-style-type:none;
 	margin:0;
@@ -201,6 +201,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', e
 	float:left;
 }
 
+#external-container li a,
 #submenu li a{
 	display:block;
 	line-height:15px;
@@ -258,16 +259,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', e
 
 #external-btn{
 	position: absolute;
-	right: 0;
-	width: 200px;
+	right: 570px;
+	width: 190px;
 	height: 40px;
-	top:50px;
-	background: black;
-	-webkit-transform: rotate(270deg);
-	-webkit-transform-origin: 200px 40px;
+	top:0px;
 	color: #fff;
-	border-radius: 15px 15px 0 0;
-	padding:5px 4px;
+	border-radius: 0px 0px 15px 15px;
+	padding:5px 25px;
 	background: -moz-linear-gradient(top, rgba(45,55,20,0.6) 0%, rgba(45,55,20,0.6) 25%, rgba(90,108,46,0.6) 75%, rgba(90,108,46,0.6) 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(45,55,20,0.6)), color-stop(25%,rgba(45,55,20,0.6)), color-stop(75%,rgba(90,108,46,0.6)), color-stop(100%,rgba(90,108,46,0.6)));
 	background: -webkit-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
@@ -278,4 +276,130 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', e
 	border: 1px solid rgba(40,49,17,0.5);
 	-webkit-box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
 	box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	text-decoration:none;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.75);
+	text-align:center;
+	font-size:16px;
+}
+
+#external-container{
+	height:auto;
+	padding:15px 25px;
+	position:absolute;
+	right:570px;
+	width:190px;
+	top:-252px;
+	color:#fff;
+	border-radius:0 0 15px 15px;
+	background:-moz-linear-gradient(top, rgba(45,55,20,0.6) 0%, rgba(45,55,20,0.6) 25%, rgba(90,108,46,0.6) 75%, rgba(90,108,46,0.6) 100%);
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(45,55,20,0.6)), color-stop(25%,rgba(45,55,20,0.6)), color-stop(75%,rgba(90,108,46,0.6)), color-stop(100%,rgba(90,108,46,0.6)));
+	background:-webkit-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background:-o-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background:-ms-linear-gradient(top, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	background:linear-gradient(to bottom, rgba(45,55,20,0.6) 0%,rgba(45,55,20,0.6) 25%,rgba(90,108,46,0.6) 75%,rgba(90,108,46,0.6) 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#992d3714', endColorstr='#995a6c2e',GradientType=0 );
+	border:1px solid rgba(40,49,17,0.5);
+	-webkit-box-shadow:inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	box-shadow:inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	text-align:center;
+}
+
+#external-container li{
+	padding:15px 0;
+}
+
+.close{
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(150,168,63,0.65)), color-stop(25%,rgba(150,168,63,0.65)), color-stop(75%,rgba(204,219,129,0.65)), color-stop(100%,rgba(204,219,129,0.65)));
+	background: -webkit-linear-gradient(top, rgba(150,168,63,0.65) 0%,rgba(150,168,63,0.65) 25%,rgba(204,219,129,0.65) 75%,rgba(204,219,129,0.65) 100%);
+	background: -o-linear-gradient(top, rgba(150,168,63,0.65) 0%,rgba(150,168,63,0.65) 25%,rgba(204,219,129,0.65) 75%,rgba(204,219,129,0.65) 100%);
+	background: -ms-linear-gradient(top, rgba(150,168,63,0.65) 0%,rgba(150,168,63,0.65) 25%,rgba(204,219,129,0.65) 75%,rgba(204,219,129,0.65) 100%);
+	background: linear-gradient(to bottom, rgba(150,168,63,0.65) 0%,rgba(150,168,63,0.65) 25%,rgba(204,219,129,0.65) 75%,rgba(204,219,129,0.65) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a696a83f', endColorstr='#a6ccdb81',GradientType=0 );
+	-webkit-box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	box-shadow: inset 0px 0px 10px 0px rgba(90, 108, 46, 0.75);
+	border-radius: 25px;
+	padding:3px 3px 0px 4px;
+}
+
+#external-close{
+	position: absolute;
+	right: 15px;
+	top: 7px;
+}
+
+#external-close img{
+	height: 25px;
+}
+#external-btn h3,
+#external-container h3{
+	color: #CCDB81;
+	text-transform: uppercase;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+	margin-top: 7px;
+}
+
+#external-container h3{
+	margin-top:0px;
+}
+
+#popup-container{
+	width: 1480px;
+	height: 920px;
+	position: absolute;
+	display: none;
+	background: rgba(0,0,0,.7);
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+	top: 80px;
+	border-radius:15px;
+	border:1px solid rgba(40,49,17,0.5);
+	background-color: #DBE9B6;
+	background-image: url(../images/bg.png);
+	z-index:1;
+}
+
+iframe{
+	display: none;
+	width: 1280px;
+	height: 720px;
+	top: 100px;
+	position: absolute;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+	border:1px solid rgba(40,49,17,0.5);
+	border-radius:15px;
+	box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.4);
+}
+
+iframe.active{
+	display:inherit;
+}
+
+#popup-container h2{
+	left: 100px;
+	position: absolute;
+	white-space: nowrap;
+	overflow-x: hidden;
+	width: 1280px;
+	text-overflow: ellipsis;
+	color: #a35e30;
+	top:-10px;
+}
+
+#popup-bg{
+	display:none;
+	background:rgba(0,0,0,.7);
+	width:1920px;
+	height:1080px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#popup-close{
+	right:-25px;
+	top:-25px;
+	position:absolute;
 }
